--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Najia Jollof </title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="../JollofRecipe/bootstrap-5.3.3-dist/css/bootstrap.css">
 </head>
 <body>
+   <div class="container">
+    <div class="navbar">
+        <ul class="navbar-nav flex-row me-auto mb-2 mb-lg-0">
+            <li class="nav-item">Home</li>
+            <li class="nav-item">About</li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Najia Jollof
+                  </a>
+                <ul class="dropdown-menu">
+                    <li class="dropdown-item">Recipe</li>
+                    <li class="dropdown-item">Steps</li>
+                    <li class="dropdown-item">Video</li>
+                </ul>
+            </li>
+            <li class="nav-item">Contact</li>
+            <li class="nav-item">Subscribe</li>
+        </ul>
+        <form class="d-flex" role="search">
+            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit"></button>
+          </form>
+    </div>
     
+   </div> 
 </body>
 </html>
